5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1578_579.log
== SUBMITION (2019-03-13 15:36:23) 
-- CODE:
print( "A UFAM tem 110 anos de fundação)
-- EXECUTION TIME:
0.203538
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print( "A UFAM tem 110 anos de funda\xe7\xe3o)
                                            ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:36:35) 
-- CODE:
print( "A UFAM tem 110 anos de fundaçao)
-- EXECUTION TIME:
0.143734
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print( "A UFAM tem 110 anos de funda\xe7ao)
                                            ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:36:39) 
-- CODE:
print( "A UFAM tem 110 anos de fundaçao)
-- EXECUTION TIME:
0.170391
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print( "A UFAM tem 110 anos de funda\xe7ao)
                                            ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:36:49) 
-- CODE:
print( "A UFAM tem 110 anos de fundacao)
-- EXECUTION TIME:
0.146618
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print( "A UFAM tem 110 anos de fundacao)
                                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:37:47) 
-- CODE:
print("A UFAM tem 110 anos de fundacao")
-- EXECUTION TIME:
0.112422
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:37:57) 
-- CODE:
print(A UFAM tem 110 anos de fundacao)
-- EXECUTION TIME:
0.129994
-- ERROR:
  File "/home/codebench/codes/1578/579/main.py", line 1
    print(A UFAM tem 110 anos de fundacao)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:38:00) 
-- CODE:
print(A UFAM tem 110 anos de fundacao)
-- ERROR:
File "XXXX", line 1
    print(A UFAM tem 110 anos de fundacao)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:38:32) 
-- CODE:
print("A UFAM tem 110 anos de fundacao")
-- OUTPUT:
A UFAM tem 110 anos de fundacao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:38:38) 
-- CODE:
print("A UFAM tem 110 anos de fundacao")
-- EXECUTION TIME:
0.125465
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:38:51) 
-- CODE:
print("A UFAM tem 110 anos de fundacao.")
-- EXECUTION TIME:
0.285315
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:39:56) 
-- CODE:
print("A UFAM tem", 2019 - 110, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:40:17) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:40:24) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.164266
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:40:50) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:41:35) 
-- CODE:
print(" A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.170635
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:41:40) 
-- CODE:
print(" A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:42:42) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:42:48) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.164801
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
